--- a/MonacoV2/synthetic/synthetic-monitor/config.yaml
+++ b/MonacoV2/synthetic/synthetic-monitor/config.yaml
@@ -28,10 +28,9 @@ configs:
         value:
           ptc_url: REPLACE_THIS_URL
       syntheticlocation__PTC_PRIVATE_LOCATION__id:
-        configId: PTC_PRIVATE_LOCATION
-        configType: synthetic-location
-        property: id
-        type: reference
+        type: environment
+        name: tenant_private_location
+        default: "SYNTHETIC_LOCATION-ABCDEFGHIJKLMNOP"
     template: fileserverdownload.json
     skip: false
   type:
@@ -64,10 +63,9 @@ configs:
         value:
           ptc_url: REPLACE_THIS_URL
       syntheticlocation__PTC_PRIVATE_LOCATION__id:
-        configId: PTC_PRIVATE_LOCATION
-        configType: synthetic-location
-        property: id
-        type: reference
+        type: environment
+        name: tenant_private_location
+        default: "SYNTHETIC_LOCATION-ABCDEFGHIJKLMNOP"
     template: queuecheck.json
     skip: false
   type:
@@ -97,10 +95,9 @@ configs:
         value:
           ptc_url: REPLACE_THIS_URL          
       syntheticlocation__PTC_PRIVATE_LOCATION__id:
-        configId: PTC_PRIVATE_LOCATION
-        configType: synthetic-location
-        property: id
-        type: reference
+        type: environment
+        name: tenant_private_location
+        default: "SYNTHETIC_LOCATION-ABCDEFGHIJKLMNOP"
     template: serverstatus.json
     skip: false
   type:
